fix broken CSS

--- a/assets/styles/Steps.less
+++ b/assets/styles/Steps.less
@@ -4,6 +4,11 @@
     padding: 15px;
     margin-bottom: 4vh;
     margin-top: 2vh;
+
+    fieldset {
+        display: grid;
+        display: contents;
+    }
 }
 
 .Steps__nav {
